--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,22 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #aaacaf; /* Negro profundo */
+    background-color: #aaacaf;
+    max-height: 100vh;
+    height: 100%;
 }
 .home-container {   
-    min-height: calc(70vh - 150px);   
+  
+    max-height: calc(70vh - 150px);
+    margin-bottom: 20px;
        
 }
-.contact-height{
-    height: auto;
-    min-height: 70vh;
+.footer{
+    display:flex; 
+    align-items:center;
+    justify-content: center;
 }
-.footer-custom{
-    position:absolute;
-    top:0;
-}
+
 .custom-navbar{
     color:#a855f7;
     text-decoration: none;
@@ -29,7 +31,9 @@ body {
 .custom-navbar:hover{
     text-decoration: none;
 }
-.btn-loadCustom{
-    color:#facc15; 
-    font-size: 18px;
+
+.footer a{
+    text-decoration: none;
+    color:#a855f7;
+    font-size: 20px;
 }
